---------------------------------------------------------------------------
Version 6.3.8  [DEVEL] 2012-02-??
- added mmjsonparse to support recognizing and parsing JSON enhanced syslog
  messages
- upgraded more plugins to support the new v6 config format:
  - ommysql
  - omlibdbi
  - omsnmp
. added message property parsesuccess to indicate if the last run
  higher-level parser could successfully parse the message or not
  (see property replacer html doc for details)
- bugfix: abort during startup when rsyslog.conf v6+ format was used in
  a certain way
- bugfix: property $!all-json made rsyslog abort if no normalized data
  was available
---------------------------------------------------------------------------
Version 6.3.7  [DEVEL] 2012-02-02
- imported refactored v5.9.6 imklog linux driver, now combined with BSD
  driver
- removed imtemplate/omtemplate template modules, as this was waste of time
  The actual input/output modules are better copy templates. Instead, the
  now-removed modules cost time for maintenance AND often caused confusion
  on what their role was.
- added a couple of new stats objects
- improved support for new v6 config system. The build-in output modules
  now all support the new config language
- bugfix: facility local<x> was not correctly interpreted in legacy filters
  Was only accepted if it was the first PRI in a multi-filter PRI.
  Thanks to forum user Mark for bringing this to our attention.
- bugfix: potential abort after reading invalid X.509 certificate
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=290
  Thanks to Tomas Heinrich for the patch
- bufgix: legacy parsing of some filters did not work correctly
- bugfix: rsyslog aborted during startup if there is an error in loading
  an action and legacy configuration mode is used
- bugfix: bsd klog driver did no longer compile
- relicensed larger parts of the code under Apache (ASL) 2.0
---------------------------------------------------------------------------